--- a/code/frontend/public/index.html
+++ b/code/frontend/public/index.html
@@ -34,6 +34,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
   </head>
   <body>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAZSliCMn66CV0BvKi9zLt0JlAI_ZYVYPU&libraries=places"></script>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
